fixing some spacing

--- a/src/scss/modules/_adopters.scss
+++ b/src/scss/modules/_adopters.scss
@@ -1,5 +1,5 @@
 .adopters {
-
+  padding-top: 1em;
   text-align: center;
 
   >h3 {
