--- a/src/scss/modules/_peering.scss
+++ b/src/scss/modules/_peering.scss
@@ -19,6 +19,8 @@
     background-position: 50% 50%;
     background-repeat: no-repeat;
     display: none;
+    padding: 0;
+    background-size: cover;
   }
 
   p {
